--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -49,8 +49,15 @@ body {
 }
 
 #sidebar {
-    grid-row: 1 / 3;
+    grid-row: 2 / 3;
     grid-column: 2 / 3;
-    margin-top: 1em;
     overflow-y: scroll;
+}
+
+#models .model-area-select, #models .model-type-select {
+    cursor: pointer;
+}
+
+#models .model-area-select:hover, #models .model-type-select:hover {
+    text-decoration: underline;
 }
