--- a/public/stylesheets/facility.css
+++ b/public/stylesheets/facility.css
@@ -1,18 +1,3 @@
-@font-face {
-    font-family: 'Artifakt';
-    src: url('/fonts/Artifakt_Element_Regular.woff2') format('woff2');
-}
-
-html, body {
-    margin: 0;
-    padding: 0;
-    font-family: Artifakt;
-}
-
-body {
-    margin: 0 1em 0 1em;
-}
-
 #container {
     height: 100vh;
     display: grid;
@@ -30,7 +15,7 @@ body {
     padding: 0.5em;
 }
 
-#header > img {
+#header > a > img {
     height: 30px;
     box-sizing: content-box;
 }
