--- a/views/facility.pug
+++ b/views/facility.pug
@@ -11,6 +11,9 @@ head
       img(src='/images/forge-logo.png' alt='Autodesk Forge Industrial Construction Demo')
     h Industrial Construction Demo
   #viewer
+  #location
+    h5 Facility: #{facility}
+    a(href="/") Back to Map
   #sidebar
     table#models.table
 include partials/footer.pug
