--- a/views/facility.pug
+++ b/views/facility.pug
@@ -16,7 +16,15 @@ head
     h5 Facility: #{facility}
     a(href="/") Back to Map
   #sidebar
-    table#models.table
+    table#models.table.table-sm
+    ul#sidebar-tabs.nav.nav-tabs.nav-fill.mb-3(role='tablist')
+      li.nav-item
+        a#realtime-tab.nav-link.active(data-toggle='tab' href='#realtime' role='tab' aria-controls='realtime' aria-selected='true') Realtime
+      li.nav-item
+        a#issues-tab.nav-link(data-toggle='tab' href='#issues' role='tab' aria-controls='issues' aria-selected='false') Issues
+    #sidebar-tabs-content.tab-content
+      #realtime.tab-pane.fade.show.active(role='tabpanel' aria-labelledby='realtime-tab') Realtime content
+      #issues.tab-pane.fade(role='tabpanel' aria-labelledby='issues-tab') Issues content
 include partials/footer.pug
 script(src='/scripts/extensions/issues.js')
 script(src='/scripts/facility.js')
