--- a/public/stylesheets/facility.css
+++ b/public/stylesheets/facility.css
@@ -41,7 +41,8 @@
     grid-column: 1 / 2;
     position: relative;
     margin: 0 1em 1em 0;
-    box-shadow: 0 0 1em rgba(0,0,0,0.1);
+    /* box-shadow: 0 0 1em rgba(0,0,0,0.5); */
+    border: 1px solid lightgray;
     overflow: hidden;
 }
 
