Added heatmaps (for now just static random data).

--- a/views/facility.pug
+++ b/views/facility.pug
@@ -27,4 +27,5 @@ head
       #issues.tab-pane.fade(role='tabpanel' aria-labelledby='issues-tab') Issues content
 include partials/footer.pug
 script(src='/scripts/extensions/issues.js')
+script(src='/scripts/extensions/heatmap.js')
 script(src='/scripts/facility.js')
