Updated styling of the issues table.

--- a/public/stylesheets/facility.css
+++ b/public/stylesheets/facility.css
@@ -59,3 +59,7 @@
 #models .model-area-select:hover, #models .model-type-select:hover {
     text-decoration: underline;
 }
+
+.dataTables_wrapper {
+    font-size: smaller;
+}
