--- a/views/facility.pug
+++ b/views/facility.pug
@@ -21,6 +21,7 @@ head
       .dropdown-menu(aria-labelledby="location-button")
         div#map
   #sidebar
+    h5 Model Visibility
     table#models.table.table-sm
     ul#sidebar-tabs.nav.nav-tabs.nav-fill.mb-3(role='tablist')
       li.nav-item
@@ -29,10 +30,12 @@ head
         a#issues-tab.nav-link(data-toggle='tab' href='#issues' role='tab' aria-controls='issues' aria-selected='false') Issues
     #sidebar-tabs-content.tab-content
       #realtime.tab-pane.fade.show.active(role='tabpanel' aria-labelledby='realtime-tab')
+        h5 Realtime Data
         div.alert.alert-secondary Select a single part in the model
         canvas#temperature-chart(width='100%')
         canvas#pressure-chart(width='100%')
       #issues.tab-pane.fade(role='tabpanel' aria-labelledby='issues-tab')
+        h5 Existing Issues
         table#issues-table.table.table-hover.table-sm
           thead
             tr
@@ -40,6 +43,8 @@ head
               th(scope="col") Author
               th(scope="col") Note
           tbody
+        h5 Report New Issue
+        div ...
 include partials/footer.pug
 script(src="https://cdn.datatables.net/v/bs4/dt-1.10.18/sl-1.2.6/datatables.min.js")
 script(src='/scripts/extensions/issues.js')
