--- a/views/facility.pug
+++ b/views/facility.pug
@@ -44,7 +44,35 @@ head
               th(scope="col") Note
           tbody
         h5 Report New Issue
-        div ...
+        form#issue-form
+          .row.mb-2
+            label.col-sm-2.col-form-label(for='issue-part') Part #
+            .col-sm-10
+              input#issue-part.form-control-plaintext(type='text' readonly='' value='0')
+          .row.mb-2
+            label.col-sm-2.col-form-label(for='issue-title') Description
+            .col-sm-10
+              input#issue-title.form-control(type='text' value='Short issue description.')
+          .row.mb-2
+            label.col-sm-2.col-form-label(for='issue-author') Author
+            .col-sm-10
+              input#issue-author.form-control(type='text' value='John Doe')
+          .row.mb-2
+            label.col-sm-1.col-form-label(for='issue-position-x') X
+            .col-sm-3
+              input#issue-position-x.form-control(type='text' value='0.0')
+            label.col-sm-1.col-form-label(for='issue-position-y') Y
+            .col-sm-3
+              input#issue-position-y.form-control(type='text' value='0.0')
+            label.col-sm-1.col-form-label(for='issue-position-z') Z
+            .col-sm-3
+              input#issue-position-z.form-control(type='text' value='0.0')
+          button.btn.btn-primary.btn-block(type='submit') Submit
+        #issue-modal.modal.fade(tabindex='-1' role='dialog' aria-hidden='true')
+          .modal-dialog
+            .modal-content
+              .modal-body
+                p ...
 include partials/footer.pug
 script(src="https://cdn.datatables.net/v/bs4/dt-1.10.18/sl-1.2.6/datatables.min.js")
 script(src='/scripts/extensions/issues.js')
