--- a/views/facility.pug
+++ b/views/facility.pug
@@ -40,6 +40,7 @@ head
           thead
             tr
               th(scope="col") Date
+              th(scope="col") Part #
               th(scope="col") Author
               th(scope="col") Note
           tbody
