Show issue form only for exactly 1 part selected.

--- a/views/facility.pug
+++ b/views/facility.pug
@@ -45,6 +45,7 @@ head
               th(scope="col") Note
           tbody
         h5 Report New Issue
+        div.alert.alert-secondary Select a single part in the model
         form#issue-form
           .row.mb-2
             label.col-sm-2.col-form-label(for='issue-model') Model
