--- a/public/stylesheets/facility.css
+++ b/public/stylesheets/facility.css
@@ -52,6 +52,10 @@
     overflow-y: scroll;
 }
 
+#models {
+    margin: 0;
+}
+
 #models .model-area-select, #models .model-type-select {
     cursor: pointer;
 }
