--- a/views/facility.pug
+++ b/views/facility.pug
@@ -17,7 +17,7 @@ head
   #viewer
   #location
     .dropdown
-      button.btn.btn-secondary.dropdown-toggle(type="button" id="location-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Facility: #{facility}, Models: mixed
+      button.btn.btn-secondary.dropdown-toggle(type="button" id="location-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Facility: #{facility}, Areas/Systems: mixed
       .dropdown-menu(aria-labelledby="location-button")
         div#map
         table#models.table.table-sm
