--- a/views/facility.pug
+++ b/views/facility.pug
@@ -17,19 +17,23 @@ head
   #viewer
   #location
     .dropdown
-      button.btn.btn-secondary.dropdown-toggle(type="button" id="location-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Facility: #{facility}, Areas/Systems: mixed
+      button.btn.btn-secondary.dropdown-toggle(type="button" id="location-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Facility: #{facility}
       .dropdown-menu(aria-labelledby="location-button")
         div#map
-        table#models.table.table-sm
   #sidebar
     ul#sidebar-tabs.nav.nav-tabs.nav-fill.mb-3(role='tablist')
       li.nav-item
-        a#realtime-tab.nav-link.active(data-toggle='tab' href='#realtime' role='tab' aria-controls='realtime' aria-selected='true') Realtime
+        a#models-tab.nav-link.active(data-toggle='tab' href='#models' role='tab' aria-controls='models' aria-selected='true') Areas/Systems
+      li.nav-item
+        a#realtime-tab.nav-link(data-toggle='tab' href='#realtime' role='tab' aria-controls='realtime' aria-selected='false') Realtime
       li.nav-item
         a#issues-tab.nav-link(data-toggle='tab' href='#issues' role='tab' aria-controls='issues' aria-selected='false') Issues
     #sidebar-tabs-content.tab-content
-      #realtime.tab-pane.fade.show.active(role='tabpanel' aria-labelledby='realtime-tab')
-        h5 Realtime Data
+      #models.tab-pane.fade.show.active(role='tabpanel' aria-labelledby='models-tab')
+        h5 Visibility
+        table#models-table.table.table-sm
+      #realtime.tab-pane.fade(role='tabpanel' aria-labelledby='realtime-tab')
+        h5 Temperature/Pressure
         div.alert.alert-secondary Select a single part in the model
         canvas#temperature-chart(width='100%')
         canvas#pressure-chart(width='100%')
