Only show charts for "equipment"/"piping" systems.

--- a/views/facility.pug
+++ b/views/facility.pug
@@ -34,7 +34,7 @@ head
         table#models-table.table.table-sm
       #realtime.tab-pane.fade(role='tabpanel' aria-labelledby='realtime-tab')
         h5 Temperature/Pressure
-        div.alert.alert-secondary Select a single part in the model
+        div.alert.alert-secondary Select a single equipment or piping component
         canvas#temperature-chart(width='100%')
         canvas#pressure-chart(width='100%')
       #issues.tab-pane.fade(role='tabpanel' aria-labelledby='issues-tab')
